fix bug : 370 incorrect font color and spacing -> please see reference link for specs

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -954,16 +954,27 @@ mat-chip {
   }
 }
 
-//sort header 
-.mat-header-cell {
-  .mat-sort-header-arrow {
-    color: $viz-gray !important;
+//sort header
+.mat-header-row {
+  .mat-header-cell {
+    .mat-sort-header-arrow {
+      color: $viz-gray !important;
+    }
+    .mat-sort-header-button {
+      color: $viz-dark-gray !important;
+    }
   }
+} 
+
+.mat-sort-header-container {
   .mat-sort-header-button {
-    color: $viz-dark-gray !important;
+    color: #000000 !important;
   }
 }
 
+.mat-cell {
+  color: $viz-gray !important;
+}
 
 //date picker
 mat-datepicker-content.mat-datepicker-content {
