Fix bug : 376 Username container's height is 48px instead of 56px

--- a/src/assets/examples/header-basic/header-basic.component.scss
+++ b/src/assets/examples/header-basic/header-basic.component.scss
@@ -64,7 +64,10 @@
   color: #696969;
   text-align: left;
   line-height: 16px;
+  height: 32px;
   border-bottom: 1px solid #ececec;
+
+ 
 
   &-top {
     font-weight: 500;
