--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -130,27 +130,27 @@
   
 }
 ::ng-deep {
-  .cdk-overlay-pane .viz-header-application-dropdown{
-    position: absolute;
-    left: -110px;
-    .mat-menu-content {
-      width: auto !important;
-      min-width: 180px;
-    }
-    .mat-menu-content .mat-menu-item:hover {
-      color: #ff4e00;
-    }
-  }
-  .cdk-overlay-pane .viz-header-login-dropdown{
-    position: absolute;
-    left: -144px;
-    top: 25px;
-    .mat-menu-content .mat-menu-item:hover {
-      color: #ff4e00;
-    }
-  }
+  // .cdk-overlay-pane .viz-header-application-dropdown{
+  //   position: absolute;
+  //   left: -110px;
+  //   .mat-menu-content {
+  //     width: auto !important;
+  //     min-width: 180px;
+  //   }
+  //   .mat-menu-content .mat-menu-item:hover {
+  //     color: #ff4e00;
+  //   }
+  // }
+  // .cdk-overlay-pane .viz-header-login-dropdown{
+  //   position: absolute;
+  //   left: -144px;
+  //   top: 25px;
+  //   .mat-menu-content .mat-menu-item:hover {
+  //     color: #ff4e00;
+  //   }
+  // }
   
-  .viz-header-application-dropdown-member {
-    left: 0 !important;
-  }
+  // .viz-header-application-dropdown-member {
+  //   left: 0 !important;
+  // }
 }
