Fix bug : 379 All footer text should have font size of 14px instead of 16px

--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -74,6 +74,7 @@
         list-style-type: none;
         display: flex;
         flex-direction: row;
+        font-size: 14px;
         li {
           list-style: none;
           cursor: pointer;
