Fix bug : 381 Copywriting mistake. 'needs' instead of 'need'

--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -78,14 +78,14 @@
       Icon Buttons <span modified-label=""></span>
     </div>
     <div class="doc-desc-2 mb-16">
-      Can be used when an action need to be emphasized.
+      Can be used when an action needs to be emphasized.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="button-icon-left"></div>
     </div>
 
     <div class="doc-desc-2 mb-16">
-      Can be used when an action need to be emphasized.
+      Can be used when an action needs to be emphasized.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="button-icon-right"></div>
