Fix bug : 382 Remove the word 'is'

--- a/src/assets/documents/components/buttontoggle.html
+++ b/src/assets/documents/components/buttontoggle.html
@@ -12,7 +12,7 @@
       Button Toggle
     </div>
     <div class="doc-desc-1">
-      Button toggles is are on/off toggles with the appearance of a button.
+      Button toggles are on/off toggles with the appearance of a button.
       These toggles can be configured to behave as either radio-buttons or
       checkboxes.
     </div>
