Fix bug : 384 Replace all words "slide-toggle" with "slide toggle" (remove the dash "-")

--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="doc-title-3">
-      Configurable slide-toggle
+      Configurable slide toggle
     </div>
     <div class="doc-desc-2">
       Use this configuration below to customize a slide toggle that fit your
@@ -56,7 +56,7 @@
     </div>
 
     <div class="doc-desc-2">
-      To get a customized slide-toggle, just set
+      To get a customized slide toggle, just set
       <span class="doc-desc-2-highlight"
         >ariaLabel / ariaLabelledby / checked / color / disableRipple / disabled
         / id / labelPosition / name / required / change / dragChange /
@@ -97,7 +97,7 @@
 
         <tr>
           <td>checked</td>
-          <td>Whether the slide-toggle element is checked or not.</td>
+          <td>Whether the slide toggle element is checked or not.</td>
           <td>boolean</td>
           <td></td>
         </tr>
@@ -126,7 +126,7 @@
         <tr>
           <td>id</td>
           <td>
-            A unique id for the slide-toggle input. If none is supplied, it will
+            A unique id for the slide toggle input. If none is supplied, it will
             be auto-generated.
           </td>
           <td>string</td>
@@ -136,7 +136,7 @@
         <tr>
           <td>labelPosition</td>
           <td>
-            Whether the label should appear after or before the slide-toggle.
+            Whether the label should appear after or before the slide toggle.
             Defaults to &apos;after&apos;.
           </td>
           <td>&apos;before&apos; | &apos;after&apos;</td>
@@ -152,7 +152,7 @@
 
         <tr>
           <td>required</td>
-          <td>Whether the slide-toggle is required.</td>
+          <td>Whether the slide toggle is required.</td>
           <td>boolean</td>
           <td></td>
         </tr>
@@ -160,7 +160,7 @@
         <tr>
           <td>change</td>
           <td>
-            An event will be dispatched each time the slide-toggle changes its
+            An event will be dispatched each time the slide toggle changes its
             value.
           </td>
           <td>EventEmitter<matslidetogglechange></matslidetogglechange></td>
@@ -170,7 +170,7 @@
         <tr>
           <td>dragChange</td>
           <td>
-            An event will be dispatched each time the slide-toggle is dragged.
+            An event will be dispatched each time the slide toggle is dragged.
             This event is always emitted when the user drags the slide toggle to
             make a change greater than 50%. It does not mean the slide
             toggle&apos;s value is changed. The event is not emitted when the
@@ -183,7 +183,7 @@
         <tr>
           <td>toggleChange</td>
           <td>
-            An event will be dispatched each time the slide-toggle input is
+            An event will be dispatched each time the slide toggle input is
             toggled. This event is always emitted when the user toggles the
             slide toggle, but this does not mean the slide toggle&apos;s value
             has changed. The event does not fire when the user drags to change
