Fix bug : Input color change to #00000

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -388,7 +388,9 @@ td.mat-cell,
 
 
 //input font-size
-
+input.mat-input-element {
+  color: #000000;
+}
 
 //autocomplete
 .viz-autocomplete-dropdown {
