--- a/src/assets/examples/card-basic/card-basic.component.html
+++ b/src/assets/examples/card-basic/card-basic.component.html
@@ -1,42 +1,1 @@
-<mat-card class="benchmark-card">
-  <div class="benchmark">
-    <div class="benchmark-title">
-      New Patient Visit
-    </div>
-    <div class="benchmark-value">24.72%</div>
-    <div class="benchmark-targetwrap">
-      <div class="benchmark-targetvalue">22.30%</div>
-      <div class="benchmark-target">Benchmark target</div>
-    </div>
-
-  </div>
-
-  <div class="patient-information">
-    <div class="patient-title">
-      Your Opportunity
-    </div>
-    <div class="patient-subtitle">
-      Potential additional new patient visits
-    </div>
-    <div class="patient-value">
-      9,879
-    </div>
-    <div class="patient-title">
-      Performance Details
-    </div>
-    <div class="patient-subtitle">
-      Total number of new patient visits / Total visits
-    </div>
-    <div class="patient-value">
-      38,403 / 169,340
-    </div>
-
-    <button mat-raised-button color="primary">Drilldown</button>
-
-
-
-  </div>
-
-
-
-</mat-card>
+<mat-card class="example-card">Simple card</mat-card>
