Fix bug : centralization the example position

--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -77,11 +77,11 @@
 }
 
 .docs-example-viewer-body {
-  padding: 56px 40px;
+  padding: 56px 0px;
   box-sizing: border-box;
   // padding-top: 40px;
   white-space: nowrap;
-  // text-align: center;
+  text-align: center;
   border-bottom: 1px solid #efefef;
   width: 100%;
   // overflow-x: scroll;
