--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -1,150 +1,226 @@
 <html>
+  <head></head>
 
-<head></head>
+  <body>
+    <div class="doc-category-title ">
+      Layout
+      <span class="docs-markdown-h3" id="contents">
+        <span header-link="contents"></span>Contents</span
+      >
+    </div>
+    <div class="doc-title-1">
+      Stepper
+    </div>
+    <div class="doc-desc-1">
+      Steppers provides a wizard-like workflow by dividing content into logical
+      steps. Steppers display progress through a sequence of logical and
+      numbered steps. They may also be used for navigation.
+    </div>
 
-<body>
-  <div class="doc-category-title ">
-    Layout
-    <span class="docs-markdown-h3" id="contents">
-      <span header-link="contents"></span>Contents</span>
-  </div>
-  <div class="doc-title-1">
-    Stepper
-  </div>
-  <div class="doc-desc-1">
-    Steppers provides a wizard-like workflow by dividing content into logical steps. Steppers display progress through a sequence
-    of logical and numbered steps. They may also be used for navigation.</div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Examples
+      <span class="docs-markdown-h3" id="examples">
+        <span header-link="examples"></span>Examples</span
+      >
+    </div>
 
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Examples
-    <span class="docs-markdown-h3" id="examples">
-      <span header-link="examples"></span>Examples</span>
-  </div>
-  <div class="doc-desc-2">
-    Steppers display progress through a sequence by breaking it up into multiple logical and numbered steps. </div>
-  <div class="doc-example-container">
-    <div app-docs-example="stepper-basic"></div>
-  </div>
-
-
-  <div class="doc-desc-2">
-    Steppers display progress through a sequence by breaking it up into multiple logical and numbered steps. </div>
-  <div class="doc-example-container">
-    <div app-docs-example="stepper-vertical"></div>
-  </div>
-
-  <div class="doc-desc-2">
-      Steppers display progress through a sequence by breaking it up into multiple logical and numbered steps. </div>
+    <div class="doc-title-4 mb-16">
+      Stepper Overview
+    </div>
     <div class="doc-example-container">
-      <div app-docs-example="stepper-custom"></div>
+      <div app-docs-example="stepper-overview"></div>
     </div>
 
-
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Props
-    <span class="docs-markdown-h3" id="props">
-      <span header-link="props"></span>Props</span>
-  </div>
-  <div class="doc-desc-2">
-    To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">steps</span>
-  </div>
-  <table class="doc-props-table">
-    <thead>
-      <tr>
-        <th>property</th>
-        <th>description</th>
-        <th>type</th>
-        <th>default</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>steps</td>
-        <td>steps setting of array</td>
-        <td>Array</td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
-      <span header-link="best_practices"></span>Best Practices</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Stepper should:
-
-    <ul class="doc-list">
-      <li>Stepper reflects the status of a process. They are never simply decorative.
-      </li>
-      <li>Stepper requires users to complete one step in order to move on to the next.</li>
-    </ul>
-  </div>
-
-  <div class="doc-divider">
-
-  </div>
-
-
-  <div class="doc-title-2">
-    Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content Guidelines</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Don&#x2019;t embed steppers within steppers or use multiple steppers on one page.</div>
-
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:360px">
-      <img src="assets/img/doc/stepper-do.png" alt="" style="max-width:none;left:-270px;top:180px">
+    <div class="doc-title-4 mb-16">
+      Stepper Vertical
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:360px">
-      <img src="assets/img/doc/stepper-dont.png" alt="" style="max-width:none;left:-270px;top:180px">
+    <div class="doc-example-container">
+      <div app-docs-example="stepper-vertical"></div>
     </div>
-  </div>
 
+    <div class="doc-title-4 mb-16">
+      Stepper Label Bottom Position
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="stepper-label-position-bottom"></div>
+    </div>
 
+    <div class="doc-title-4 mb-16">
+      Stepper with Optional Steps
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="stepper-optional"></div>
+    </div>
 
+    <div class="doc-title-4 mb-16">
+      Stepper with Editable Steps
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="stepper-editable"></div>
+    </div>
 
-  <div class="doc-divider">
+    <div class="doc-title-4 mb-16">
+      Stepper with Editable Steps
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="stepper-states"></div>
+    </div>
 
-  </div>
+    <div class="doc-title-4 mb-16">
+      Stepper with Editable Steps
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="stepper-errors"></div>
+    </div>
 
-  <div class="doc-title-2">
-    Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design Specs</span>
-  </div>
+    <div class="doc-divider"></div>
 
+    <div class="doc-title-2">
+      Props
+      <span class="docs-markdown-h3" id="props">
+        <span header-link="props"></span>Props</span
+      >
+    </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/stepper-spec.png" alt="">
-  </div>
+    <div class="doc-desc-2">
+      To get a customized stepper, just set
+      <span class="doc-desc-2-highlight"
+        >linear / selected / selectedIndex / animationDone / selectionChange /
+        steps
+      </span>
+    </div>
 
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
-  <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
-  </div>
-  <div sketch-link=""></div>
+    <table class="doc-props-table">
+      <thead>
+        <tr>
+          <th>property</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>linear</td>
+          <td>
+            Whether the validity of previous steps should be checked or not.
+          </td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>selected</td>
+          <td>The step that is selected.</td>
+          <td>CdkStep</td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>selectedIndex</td>
+          <td>The index of the selected step.</td>
+          <td>number</td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>animationDone</td>
+          <td>Event emitted when the current step is done transitioning in.</td>
+          <td>EventEmitter<void></void></td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>selectionChange</td>
+          <td>Event emitted when the selected step has changed.</td>
+          <td>EventEmitter<stepperselectionevent></stepperselectionevent></td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>steps</td>
+          <td>The list of step components that the stepper is holding.</td>
+          <td>QueryList<cdkstep></cdkstep></td>
+          <td></td>
+        </tr>
 
-</body>
+        <tr>
+          <td>labelPosition</td>
+          <td>Whether the label should display in bottom or end position.</td>
+          <td>&apos;bottom&apos; | &apos;end&apos;</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
 
+    <div class="doc-divider"></div>
+
+    <div class="doc-title-2">
+      Usage &amp; Content Guidelines
+      <span class="docs-markdown-h3" id="content_guidelines">
+        <span header-link="content_guidelines"></span>Content Guidelines</span
+      >
+    </div>
+
+    <div class="doc-desc-2">
+      Don&#x2019;t embed steppers within steppers or use multiple steppers on
+      one page.
+    </div>
+
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w100 docs-usage-center"
+        style="height:360px"
+      >
+        <img src="assets/img/doc/stepper-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
+        style="height:360px"
+      >
+        <img src="assets/img/doc/stepper-dont.png" alt="" />
+      </div>
+    </div>
+
+    <div class="doc-divider"></div>
+
+    <div class="doc-title-2">
+      Design Specs
+      <span class="docs-markdown-h3" id="design_specs">
+        <span header-link="design_specs"></span>Design Specs</span
+      >
+    </div>
+
+    <div class="docs-usage-spec docs-usage-center mb-16" style="height:280px">
+      <img src="assets/img/doc/stepper-spec.png" alt="" />
+    </div>
+
+    <div class="docs-usage-spec docs-usage-center mb-16" style="height:280px">
+      <img src="assets/img/doc/stepper-spec-optional.png" alt="" />
+    </div>
+
+    <div class="docs-usage-spec docs-usage-center mb-16" style="height:522px">
+      <img src="assets/img/doc/stepper-spec-content.png" alt="" />
+    </div>
+
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Component Location for Designers
+      <span class="docs-markdown-h3" id="component_location_for_designers">
+        <span header-link="component_location_for_designers"></span>Component
+        Location for Designers</span
+      >
+    </div>
+    <a
+      class="doc-download-link"
+      href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
+      >Download Sektch File</a
+    >
+    <div class="doc-desc-2">
+      For designers, to add this component to your design, follow this path
+      within the Sketch App UI:
+    </div>
+    <div sketch-link=""></div>
+  </body>
 </html>
