Update toolkit-v2 badge component

--- a/src/assets/examples/badge-icon/badge-icon.component.html
+++ b/src/assets/examples/badge-icon/badge-icon.component.html
@@ -1,8 +1,2 @@
-<div class="example-wrapper">
-  <mat-icon matBadge="15" matBadgeColor="accent" matBadgePosition="above after"
-    >folder</mat-icon
-  >
-  <mat-icon matBadge="1,234" matBadgeColor="warn" matBadgePosition="above after"
-    >folder</mat-icon
-  >
-</div>
+<mat-icon matBadge="123" matBadgeColor="accent">notifications</mat-icon>
+<mat-icon matBadge="1,234" matBadgeColor="accent">notifications</mat-icon>
