--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -1,204 +1,236 @@
 <html>
+  <head></head>
 
-<head></head>
-
-<body>
-  <div class="doc-category-title">
-    Buttons &amp; Indicators
-    <span class="docs-markdown-h3" id="contents">
-      <span header-link="contents"></span>Contents</span>
-  </div>
-  <div class="doc-title-1">
-    Badge
-  </div>
-  <div class="doc-desc-1">
-    Badges are small status descriptors for UI elements. A badge consists of a
-    small circle, typically containing a number or
-    other short set of characters, that appears in proximity to another object.
-  </div>
-
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Examples
-    <span class="docs-more-example"></span>
-    <span class="docs-markdown-h3" id="examples">
-      <span header-link="examples"></span>Examples</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Examples of badges paring with text, using primary and secondary colors.
-    The badge is applied to its children.
-    <div class="doc-example-container">
-      <div app-docs-example="badge-basic"></div>
+  <body>
+    <div class="doc-category-title">
+      Buttons &amp; Indicators
+      <span class="docs-markdown-h3" id="contents">
+        <span header-link="contents"></span>Contents</span
+      >
     </div>
-  </div>
+    <div class="doc-title-1">
+      Badge
+    </div>
+    <div class="doc-desc-1">
+      Badges are small status descriptors for UI elements. A badge consists of a
+      small circle, typically containing a number or other short set of
+      characters, that appears in proximity to another object.
+    </div>
 
-  <div class="doc-desc-2">
-    Examples of badges paring with icon.
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Examples
+      <span class="docs-more-example"></span>
+      <span class="docs-markdown-h3" id="examples">
+        <span header-link="examples"></span>Examples</span
+      >
+    </div>
+
+    <div class="doc-title-4 mb-16">
+      Text with a badge
+    </div>
+
+    <div class="doc-example-container">
+      <div app-docs-example="badge-text"></div>
+    </div>
+
+    <div class="doc-title-4 mb-16">
+      Icon with a badge
+    </div>
     <div class="doc-example-container">
       <div app-docs-example="badge-icon"></div>
     </div>
-  </div>
-  <div class="doc-desc-2">
-    Example of badge tabs.
+
+    <div class="doc-title-4 mb-16">
+      Button with a badge on the left
+    </div>
+
     <div class="doc-example-container">
-      <div app-docs-example="badge-tabs"></div>
+      <div app-docs-example="badge-button"></div>
     </div>
-  </div>
 
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Props
-    <span class="docs-markdown-h3" id="props">
-      <span header-link="props"></span>Props</span>
-  </div>
-  <div class="doc-desc-2">
-    To get a customized badge, just set
-    <span class="doc-desc-2-highlight">color/matBadgeHidden/matBadgeOverlap/matBadgePosition/matBadgeSize</span>
-  </div>
-  <table class="doc-props-table">
-    <thead>
-      <tr>
-        <th>property</th>
-        <th>description</th>
-        <th>type</th>
-        <th>default</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>color</td>
-        <td>The color of the badge. Can be primary, accent, or warn.</td>
-        <td>string</td>
-        <td>primary</td>
-      </tr>
-      <tr>
-        <td>matBadgeHidden</td>
-        <td>Whether the badge is hidden.</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-      <tr>
-        <td>matBadgeOverlap</td>
-        <td>Whether the badge should overlap its contents or not.</td>
-        <td>boolean</td>
-        <td>true</td>
-      </tr>
-      <tr>
-        <td>matBadgePosition</td>
-        <td>Position the badge should reside. Accepts any combination of
-          &apos;above&apos;|&apos;below&apos; and
-          &apos;before&apos;|&apos;after&apos;</td>
-        <td>string</td>
-        <td>above after</td>
-      </tr>
-      <tr>
-        <td>matBadgeSize</td>
-        <td>Size of the badge. Can be &apos;small&apos;, &apos;medium&apos;, or
-          &apos;large&apos;.</td>
-        <td>string</td>
-        <td>medium</td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
-      <span header-link="best_practices"></span>Best Practices</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Badges should:
-    <ul class="doc-list">
-      <li>Use established and right colors appropriately in each case.</li>
-      <li>Be positioned in consistent locations in the interface. The badge
-        should always be close to the element that it supports
-      </li>
-    </ul>
-  </div>
-
-
-  <div class="doc-divider">
-  </div>
-
-
-
-  <div class="doc-title-2">
-    Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content Guidelines</span>
-  </div>
-  <div class="doc-desc-2">
-    Badge should not block the over elements it support. Bagde should always
-    stay on the right of the main elements. </div>
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-block-do.png" alt="">
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Props
+      <span class="docs-markdown-h3" id="props">
+        <span header-link="props"></span>Props</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-block-dont.png" alt="">
+
+    <div class="doc-desc-2">
+      To get a customized badge, just set
+      <span class="doc-desc-2-highlight"
+        >color / content / description / disabled / hidden / overlap / position
+        / size</span
+      >
     </div>
-  </div>
-  <div class="doc-desc-2">
-    Do not add shadow to the badge.
-  </div>
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-shadow-do.png" alt="">
+
+    <table class="doc-props-table">
+      <thead>
+        <tr>
+          <th>property</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>color</td>
+          <td>The color of the badge. Can be primary, accent, or warn.</td>
+          <td>ThemePalette</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>content</td>
+          <td>The content for the badge</td>
+          <td>string</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>description</td>
+          <td>
+            Message used to describe the decorated element via aria-describedby
+          </td>
+          <td>string</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>disabled</td>
+          <td>Whether the component is disabled.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>hidden</td>
+          <td>Whether the badge is hidden.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>overlap</td>
+          <td>Whether the badge should overlap its contents or not</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>position</td>
+          <td>
+            Position the badge should reside. Accepts any combination of
+            &apos;above&apos;|&apos;below&apos; and
+            &apos;before&apos;|&apos;after&apos;
+          </td>
+          <td>MatBadgePosition</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>size</td>
+          <td>
+            Size of the badge. Can be &apos;small&apos;, &apos;medium&apos;, or
+            &apos;large&apos;.
+          </td>
+          <td>MatBadgeSize</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="doc-divider"></div>
+
+    <div class="doc-title-2">
+      Usage &amp; Content Guidelines
+      <span class="docs-markdown-h3" id="content_guidelines">
+        <span header-link="content_guidelines"></span>Content Guidelines</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-shadow-dont.png" alt="">
+    <div class="doc-desc-2">
+      Badge should not block the over elements it support. Bagde should always
+      stay on the right of the main elements.
     </div>
-  </div>
-  <div class="doc-desc-2">
-    Do not use the same color as the main elements.
-  </div>
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-color-do.png" alt="">
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/badge-block-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/badge-block-dont.png" alt="" />
+      </div>
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-color-dont.png" alt="">
+    <div class="doc-desc-2">
+      Do not add shadow to the badge.
     </div>
-  </div>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design Specs</span>
-  </div>
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/badge-shadow-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/badge-shadow-dont.png" alt="" />
+      </div>
+    </div>
+    <div class="doc-desc-2">
+      Do not use the same color as the main elements.
+    </div>
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/badge-color-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/badge-color-dont.png" alt="" />
+      </div>
+    </div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Design Specs
+      <span class="docs-markdown-h3" id="design_specs">
+        <span header-link="design_specs"></span>Design Specs</span
+      >
+    </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/badge-spec.png" alt="">
-  </div>
+    <div class="docs-usage-spec docs-usage-center" style="height:280px">
+      <img src="assets/img/doc/badge-spec.png" alt="" />
+    </div>
 
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component
-      Location for Designers</span>
-  </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
-    Sektch File</a>
-  <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path
-    within the Sketch App UI:
-  </div>
-  <div sketch-link=""></div>
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Component Location for Designers
+      <span class="docs-markdown-h3" id="component_location_for_designers">
+        <span header-link="component_location_for_designers"></span>Component
+        Location for Designers</span
+      >
+    </div>
+    <a
+      class="doc-download-link"
+      href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
+      >Download Sektch File</a
+    >
+    <div class="doc-desc-2">
+      For designers, to add this component to your design, follow this path
+      within the Sketch App UI:
+    </div>
+    <div sketch-link=""></div>
+  </body>
 </html>
