--- a/src/assets/examples/badge-icon/badge-icon.component.css
+++ b/src/assets/examples/badge-icon/badge-icon.component.css
@@ -1,9 +1,3 @@
-.mat-badge {
-  margin: 0 40px;
-}
-mat-icon {
-  color: #9f9f9f;
-}
-.example-wrapper{
-  text-align: center
+mat-icon:last-child {
+  margin-left: 70px;
 }
