Fix bug : make menu-icon example trigger icon's color -> #000000

--- a/src/assets/examples/menu-icon/menu-icon.component.html
+++ b/src/assets/examples/menu-icon/menu-icon.component.html
@@ -1,6 +1,6 @@
 <div class="example-centralization">
   <button mat-icon-button [matMenuTriggerFor]="menu">
-    <mat-icon >more_vert</mat-icon>
+    <mat-icon class="menu-trigger-icon">more_vert</mat-icon>
   </button>
 </div>
 <mat-menu #menu="matMenu" backdropClass="viz-menu">
