Update toolkit-v2 slider document

--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -12,7 +12,7 @@
       Slider
     </div>
     <div class="doc-desc-1">
-      Sliders allow users to make selections from a range of values.
+      Allows for the selection of a value from a range via mouse, touch, or keyboard.
     </div>
 
     <div class="doc-divider"></div>
@@ -222,25 +222,6 @@
         </tr>
       </tbody>
     </table>
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Best Practices
-      <span class="docs-markdown-h3" id="best_practices">
-        <span header-link="best_practices"></span>Best Practices</span
-      >
-    </div>
-
-    <div class="doc-desc-2">
-      Use slider to:
-      <ul class="doc-list">
-        <li>Illustrate/communicate a sliding scale of an option.</li>
-        <li>
-          Validate input as soon as the user has finished interacting with a
-          field.
-        </li>
-      </ul>
-    </div>
-
     <div class="doc-divider"></div>
 
     <div class="doc-title-2">
