Update toolkit-v2 autocomplete document

--- a/src/assets/documents/components/autocomplete.html
+++ b/src/assets/documents/components/autocomplete.html
@@ -194,28 +194,6 @@
     </table>
 
     <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Best Practice
-      <span class="docs-markdown-h3" id="best_practices">
-        <span header-link="best_practices"></span>Best Practices</span
-      >
-    </div>
-
-    <div class="doc-desc-2">
-      Form field should:
-      <ul class="doc-list">
-        <li>
-          Be clearly labeled so it&#x2019;s obvious to the users what they
-          should enter into the field
-        </li>
-        <li>Only ask for information that&#x2019;s really needed</li>
-        <li>
-          Validate input as soon as user has finished interacting with a field
-        </li>
-      </ul>
-    </div>
-
-    <div class="doc-divider"></div>
 
     <div class="doc-title-2">
       Usage &amp; Content Guidelines
@@ -224,38 +202,21 @@
       >
     </div>
     <div class="doc-desc-2">
-      Label text should be short, clear, and fully visible. It shouldn&#x2019;t
-      be truncated.
+      Keep the suggest input brief and concise. Do not break the suggest input
+      into two lines.
     </div>
     <div class="docs-guideline-group">
       <div
-        class="docs-usage-do docs-usage-w50 docs-usage-center"
-        style="height:160px"
+        class="docs-usage-do docs-usage-w100 docs-usage-center mb-16"
+        style="height:327px"
       >
-        <img src="assets/img/doc/formfield-pic-1.png" alt="" />
+        <img src="assets/img/doc/autocomplete-line-do.png" alt="" />
       </div>
       <div
-        class="docs-usage-dont docs-usage-w50 docs-usage-center"
-        style="height:160px"
+        class="docs-usage-dont docs-usage-w100 docs-usage-center"
+        style="height:327px"
       >
-        <img src="assets/img/doc/formfield-pic-2.png" alt="" />
-      </div>
-    </div>
-    <div class="doc-desc-2">
-      Label text shouldn&#x2019;t take up multiple lines.
-    </div>
-    <div class="docs-guideline-group">
-      <div
-        class="docs-usage-do docs-usage-w50 docs-usage-center"
-        style="height:160px"
-      >
-        <img src="assets/img/doc/formfield-pic-3.png" alt="" />
-      </div>
-      <div
-        class="docs-usage-dont docs-usage-w50 docs-usage-center"
-        style="height:160px"
-      >
-        <img src="assets/img/doc/formfield-pic-4.png" alt="" />
+        <img src="assets/img/doc/autocomplete-line-dont.png" alt="" />
       </div>
     </div>
     <div class="doc-divider"></div>
@@ -267,7 +228,7 @@
     </div>
 
     <div class="docs-usage-spec docs-usage-center" style="height:280px">
-      <img src="assets/img/doc/formfield-spec.png" alt="" />
+      <img src="assets/img/doc/autocomplete-spec.png" alt="" />
     </div>
 
     <div class="doc-divider"></div>
