tabs fix bug 388 incorrect font color: active #696969, inactive #C3C3C3 -> apply this globally

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -486,6 +486,13 @@ input.mat-input-element {
 
 
 //tabs
+.mat-tab-label {
+  color: $viz-light-gray !important;
+  &.mat-tab-label-active {
+    color: $viz-gray !important;
+  }
+}
+
 
 //tooltip
 *[mattooltip] {
