tabs fix bug 390 please update to new Usage & Content Guidelines, Design Specs & Component Location for Designers content

--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -217,40 +217,46 @@
     </div>
 
     <div class="doc-desc-2">
-      Don&#x2019;t use simple tabs within a wide column, even when there are
-      just a few items.
+      Don’t use simple tabs within a wide column, even when there are just a few
+      items.
     </div>
 
     <div class="docs-guideline-group">
       <div
         class="docs-usage-do docs-usage-w100 docs-usage-center"
-        style="height:282px"
+        style="height:268px"
       >
         <img src="assets/img/doc/tabs-do.png" alt="" />
       </div>
       <div
         class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
-        style="height:282px"
+        style="height:268px"
       >
         <img src="assets/img/doc/tabs-dont.png" alt="" />
       </div>
     </div>
 
     <div class="doc-desc-2">
-      If there is not enough space for tabs within a narrow column, don&#x2019;t
-      wrap or resize text, make the tabs scrollable instead.
+      Although label text can wrap to a second line, scrollable tabs confine
+      text to a single row.
     </div>
 
     <div class="docs-guideline-group">
       <div
         class="docs-usage-do docs-usage-w100 docs-usage-center"
-        style="height:282px"
+        style="height:268px"
       >
         <img src="assets/img/doc/tabs-scroll-do.png" alt="" />
       </div>
       <div
+        class="docs-usage-warn docs-usage-w100 docs-usage-center docs-mt16"
+        style="height:268px"
+      >
+        <img src="assets/img/doc/tabs-scroll-warn.png" alt="" />
+      </div>
+      <div
         class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
-        style="height:282px"
+        style="height:268px"
       >
         <img src="assets/img/doc/tabs-scroll-dont.png" alt="" />
       </div>
@@ -283,7 +289,7 @@
     <a
       class="doc-download-link"
       href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
-      >Download Sektch File</a
+      >Download Sketch File</a
     >
     <div class="doc-desc-2">
       For designers, to add this component to your design, follow this path
