tabs fix bug 392 confirgurable option should align left with example tab

--- a/src/assets/examples/tab-group-dynamic/tab-group-dynamic.component.html
+++ b/src/assets/examples/tab-group-dynamic/tab-group-dynamic.component.html
@@ -1,11 +1,11 @@
-<div>
+<div class="example-controller">
   <span class="example-input-label"> Selected tab index: </span>
   <mat-form-field>
     <input matInput type="number" [formControl]="selected">
   </mat-form-field>
 </div>
 
-<div>
+<div class="example-controller">
   <button mat-raised-button
           class="example-add-tab-button"
           (click)="addTab(selectAfterAdding.checked)">
