tabs fix bug change custom label icon

--- a/src/assets/examples/tab-group-custom-label/tab-group-custom-label.component.html
+++ b/src/assets/examples/tab-group-custom-label/tab-group-custom-label.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group>
   <mat-tab>
     <ng-template mat-tab-label>
-      <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+      <mat-icon class="example-tab-icon">remove_red_eye</mat-icon>
       First
     </ng-template>
     Content 1
@@ -9,7 +9,7 @@
 
   <mat-tab>
     <ng-template mat-tab-label>
-      <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+      <mat-icon class="example-tab-icon">remove_red_eye</mat-icon>
       Second
     </ng-template>
     Content 2
@@ -17,7 +17,7 @@
 
   <mat-tab>
     <ng-template mat-tab-label>
-      <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+      <mat-icon class="example-tab-icon">remove_red_eye</mat-icon>
       Third
     </ng-template>
 
