--- a/src/assets/examples/tab-group-theme/tab-group-theme.component.css
+++ b/src/assets/examples/tab-group-theme/tab-group-theme.component.css
@@ -1,10 +1,32 @@
 .example-button-toggle-label {
   display: inline-block;
   margin: 16px;
+  font-weight: 300;
+  font-size: 16px;
+  color: #696969;
+  letter-spacing: 0;
+  line-height: 18px;
 }
 
 .mat-tab-group {
   margin-left: 40px;
   margin-right: 40px;
   text-align: left;
+}
+
+.mat-radio-button ~ .mat-radio-button {
+  margin-left: 16px;
+}
+
+.mat-radio-group {
+  font-weight: 300;
+  font-size: 16px;
+  color: #696969;
+  letter-spacing: 0;
+  line-height: 18px;
+}
+
+.example-controller {
+  text-align: left;
+  padding-left: 24px;
 }
