sort header fix bug 398 incorrect icon color -> should be #696969 instead of #757575

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -690,6 +690,10 @@ mat-chip {
   color: $viz-gray !important;
 }
 
+.mat-sort-header-arrow {
+  color: $viz-gray !important;
+}
+
 //date picker
 mat-datepicker-content.mat-datepicker-content {
   height: auto !important;
