autocomplete fix bug 399 Design Specs image should align center with Usage & Content Guidelines

--- a/src/assets/documents/components/autocomplete.html
+++ b/src/assets/documents/components/autocomplete.html
@@ -227,8 +227,8 @@
       >
     </div>
 
-    <div class="docs-usage-spec docs-usage-center" style="height:280px">
-      <img src="assets/img/doc/autocomplete-spec.png" alt="" />
+    <div class="docs-usage-spec docs-usage-center-no-scale" style="height:280px">
+      <img src="assets/img/doc/autocomplete-spec.png" alt="" style="width:330px;margin-left:30px" />
     </div>
 
     <div class="doc-divider"></div>
