slider fix bug 401 please update to new Usage & Content Guidelines

--- a/src/assets/documents/components/autocomplete.html
+++ b/src/assets/documents/components/autocomplete.html
@@ -202,8 +202,8 @@
       >
     </div>
     <div class="doc-desc-2">
-      Keep the suggest input brief and concise. Do not break the suggest input
-      into two lines.
+      Do not use sliders for ranges that are too large (1-1000) or too small
+      (1-3)
     </div>
     <div class="docs-guideline-group">
       <div
@@ -227,8 +227,15 @@
       >
     </div>
 
-    <div class="docs-usage-spec docs-usage-center-no-scale" style="height:280px">
-      <img src="assets/img/doc/autocomplete-spec.png" alt="" style="width:330px;margin-left:30px" />
+    <div
+      class="docs-usage-spec docs-usage-center-no-scale"
+      style="height:280px"
+    >
+      <img
+        src="assets/img/doc/autocomplete-spec.png"
+        alt=""
+        style="width:330px;margin-left:30px"
+      />
     </div>
 
     <div class="doc-divider"></div>
