ripple fix bug incorrect confirgurable option design -> please see reference link

--- a/src/assets/examples/ripple-overview/ripple-overview.component.css
+++ b/src/assets/examples/ripple-overview/ripple-overview.component.css
@@ -25,3 +25,10 @@
 .example-ripple-form-field {
   margin: 0 12px 0 0;
 }
+
+.example-controller {
+  text-align: left;
+  width: 400px;
+  padding-left: 40px;
+  white-space: normal;
+}
