--- a/src/assets/examples/ripple-overview/ripple-overview.component.html
+++ b/src/assets/examples/ripple-overview/ripple-overview.component.html
@@ -1,21 +1,30 @@
-<mat-checkbox [(ngModel)]="centered" class="example-ripple-checkbox">Centered</mat-checkbox>
-<mat-checkbox [(ngModel)]="disabled" class="example-ripple-checkbox">Disabled</mat-checkbox>
-<mat-checkbox [(ngModel)]="unbounded" class="example-ripple-checkbox">Unbounded</mat-checkbox>
+<div class="example-controller">
+  <mat-checkbox [(ngModel)]="centered" class="example-ripple-checkbox"
+    >Centered</mat-checkbox
+  >
+  <mat-checkbox [(ngModel)]="disabled" class="example-ripple-checkbox"
+    >Disabled</mat-checkbox
+  >
+  <mat-checkbox [(ngModel)]="unbounded" class="example-ripple-checkbox"
+    >Unbounded</mat-checkbox
+  >
 
-<mat-form-field class="example-ripple-form-field">
-  <input matInput [(ngModel)]="radius" type="number" placeholder="Radius">
-</mat-form-field>
-<mat-form-field class="example-ripple-form-field">
-  <input matInput [(ngModel)]="color" type="text" placeholder="Color">
-</mat-form-field>
+  <mat-form-field class="example-ripple-form-field">
+    <input matInput [(ngModel)]="radius" type="number" placeholder="Radius" />
+  </mat-form-field>
+  <mat-form-field class="example-ripple-form-field">
+    <input matInput [(ngModel)]="color" type="text" placeholder="Color" />
+  </mat-form-field>
+</div>
 
-
-<div class="example-ripple-container mat-elevation-z4"
-     matRipple
-     [matRippleCentered]="centered"
-     [matRippleDisabled]="disabled"
-     [matRippleUnbounded]="unbounded"
-     [matRippleRadius]="radius"
-     [matRippleColor]="color">
+<div
+  class="example-ripple-container mat-elevation-z4"
+  matRipple
+  [matRippleCentered]="centered"
+  [matRippleDisabled]="disabled"
+  [matRippleUnbounded]="unbounded"
+  [matRippleRadius]="radius"
+  [matRippleColor]="color"
+>
   Click me
 </div>
