badge fix bug 405 Font weight of the badge should be 500 instead of 600

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -482,6 +482,9 @@ input.mat-input-element {
 }
 
 //badge
+.mat-badge-content {
+  font-weight: 500 !important;
+}
 
 //tabs
 mat-tab-group:not([ng-reflect-color]) {
