badge fix bug 407 Color of icon should be #9F9F9F

--- a/src/assets/examples/badge-icon/badge-icon.component.html
+++ b/src/assets/examples/badge-icon/badge-icon.component.html
@@ -1,2 +1,2 @@
-<mat-icon matBadge="123" matBadgeColor="accent">notifications</mat-icon>
-<mat-icon matBadge="1234" matBadgeColor="accent">notifications</mat-icon>
+<mat-icon class="badge-icon" matBadge="123" matBadgeColor="accent">notifications</mat-icon>
+<mat-icon class="badge-icon" matBadge="1234" matBadgeColor="accent">notifications</mat-icon>
