stepper fix bug 415 please update title to "Stepper with customized states"

--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="doc-title-4 mb-16">
-      Stepper with Editable Steps
+      Stepper with customized states
     </div>
     <div class="doc-example-container">
       <div app-docs-example="stepper-states"></div>
