stepper fix bug 417 please update title to "Stepper that displays errors in the steps"

--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="doc-title-4 mb-16">
-      Stepper with Editable Steps
+      Stepper that displays errors in the steps
     </div>
     <div class="doc-example-container">
       <div app-docs-example="stepper-errors"></div>
